--- a/App/View/internal/internal.add.html
+++ b/App/View/internal/internal.add.html
@@ -330,6 +330,7 @@
             layer.open({
                 type: 1,
                 title: false,
+                scrollbar: false,
                 closeBtn: false,
                 skin: 'yourclass',
 
