--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -367,6 +367,7 @@
         }
         layer.prompt({
             formType: 2,
+            scrollbar: false,
             value: '',
             maxlength: 100,
             title: '请输入下架原因'
@@ -416,6 +417,7 @@
         layer.open({
             type: 2,
             title: false,
+            scrollbar: false,
             closeBtn: false,
             area: ['520px', '400px'],
 
@@ -441,6 +443,7 @@
         layer.open({
             type: 2,
             title: false,
+            scrollbar: false,
             closeBtn: false,
             area: ['560px', '350px'],
 
@@ -454,6 +457,7 @@
         layer.open({
             type: 2,
             title: false,
+            scrollbar: false,
             closeBtn: false,
             area: ['650px', '420px'],
             content: '/internal/import/'
@@ -492,6 +496,7 @@
 		 layer.open({
             type: 1,
             title: false,
+            scrollbar: false,
             closeBtn: false,
             area: ['630px', '360px'],
             content: $('#download')
