--- a/App/View/phone/phone.index.html
+++ b/App/View/phone/phone.index.html
@@ -46,6 +46,7 @@
             layer.open({
                 type: 2,
                 title: false,
+                scrollbar: false,
                 closeBtn: false,
                 area: ['500px', '240px'],
 
@@ -63,6 +64,7 @@
             layer.open({
                 type: 2,
                 title: false,
+                scrollbar: false,
                 closeBtn: false,
                 area: ['500px', '240px'],
 
@@ -80,6 +82,7 @@
             layer.open({
                 type: 2,
                 title: false,
+                scrollbar: false,
                 closeBtn: false,
                 area: ['500px', '302px'],
 
