--- a/App/View/blacklist/blacklist.index.html
+++ b/App/View/blacklist/blacklist.index.html
@@ -83,6 +83,7 @@
             layer.open({
                 type: 2,
                 title: false,
+                scrollbar: false,
                 closeBtn: false,
                 area: ['500px', '380px'],
 
