--- a/App/View/basic/basic.index.html
+++ b/App/View/basic/basic.index.html
@@ -43,8 +43,11 @@
         您可以在此管理首页的基本信息。
     </div>
     <div class="wrap-top">
-        <h4>首页基本配置<img class="info-icon" src="<?=StaticDir?>1.2/images/u253.gif"></h4><span></span>
+        <h4>BANNER图管理<img class="info-icon" src="<?=StaticDir?>1.2/images/u253.gif"></h4><span></span>
         <img class="info-show" src="<?=StaticDir?>1.2/images/u279.png" />
+    </div>
+    <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;" role="alert">
+        您可以在此管理首页的banner图，最多可创建 5 条
     </div>
     
     <div class="wrap-table">
@@ -94,7 +97,7 @@
     </div>
     
     <div class="wrap-top">
-        <h4>滑动广告设置<img class="info-icon" src="<?=StaticDir?>1.2/images/u253.gif"></h4><span></span>
+        <h4>热门搜索词<img class="info-icon" src="<?=StaticDir?>1.2/images/u253.gif"></h4><span></span>
         <img class="info-show" src="<?=StaticDir?>1.2/images/u276.png" />
     </div>
     <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;" role="alert">
@@ -105,8 +108,9 @@
         <table class="table table-hover" style="border: 1px solid #dadada;margin-bottom: 0">
             <thead>
                 <tr class="active">
-                    <th width="25%">热门交易标题</th>
-                    <th width="50%">是否着重展示</th>
+                    <th width="20%">热门交易标题</th>
+                    <th width="15%">是否着重展示</th>
+                    <th width="40%">链接</th>
                     <th width="25%">操作</th>
                 </tr>
             </thead>
@@ -114,7 +118,8 @@
             <? foreach ($list[2] as $k => $v) { ?>
                 <tr>
                     <td style="vertical-align:middle"><?=$v['desc']?></td>
-                    <td style="vertical-align:middle"><?=$v['other']==0?'否':'是'?></td>
+                    <td style="vertical-align:middle"><?=$v['other']==0?'否':'是'?><?if(!empty($INDEX_WORD_STRESS[$v['other']])){echo '('.$INDEX_WORD_STRESS[$v['other']].')';}?></td>
+                    <td style="vertical-align:middle"><?=empty($v['link'])?'无':$v['link']?></td>
                     <td style="vertical-align:middle">
                         <span class="icon icon-delete">
                             <a href="javascript:;" onclick="cancel(<?=$v['id']?>)"  class="btn-warning">删除</a>
@@ -138,7 +143,53 @@
     </div>
 
     <div class="margin-sx-10">
-        <button class="btn btn-danger" id="add-word" type="button">新增搜索词</button>
+        <button class="btn btn-danger" id="add-word" type="button">创建新搜索词</button>
+    </div>
+
+    <div class="wrap-top">
+        <h4>滑动广告设置<img class="info-icon" src="<?=StaticDir?>1.2/images/u253.gif"></h4><span></span>
+        <img class="info-show" src="<?=StaticDir?>1.2/images/u276.png" />
+    </div>
+    
+    <div class="wrap-table">
+        <table class="table table-hover" style="border: 1px solid #dadada;margin-bottom: 0">
+            <thead>
+                <tr class="active">
+                    <th width="20%">广告图</th>
+                    <th width="40%">链接</th>
+                    <th width="25%">操作</th>
+                </tr>
+            </thead>
+            <tbody class="table-list">
+            <? foreach ($list[3] as $k => $v) { ?>
+                <tr>
+                    <td align="center" style="vertical-align:middle">
+                    <img class="info-pic" src="<?=$v['pic']?>" /></td>
+                    <td style="vertical-align:middle"><?=empty($v['link'])?'无':$v['link']?></td>
+                    <td style="vertical-align:middle">
+                        <span class="icon icon-delete">
+                            <a href="javascript:;" onclick="cancel(<?=$v['id']?>)"  class="btn-warning">删除</a>
+                        </span>
+                        <span class="icon icon-editor">
+                        <a href="javascript:void(0);" onclick="slideEdit(<?=$v['id']?>)" class="btn-info">编辑</a>
+                        </span>
+                        &nbsp;&nbsp;
+                        <span onclick="orderBasic(<?=$v['id']?>, 1, 3)">
+                            <img class="img" src="<?=StaticDir?>1.2/images/u85.gif">
+                        </span>
+                        &nbsp;
+                        <span class="img-flip" onclick="orderBasic(<?=$v['id']?>, 2, 3)">
+                            <img class="img" src="<?=StaticDir?>1.2/images/u85.gif">
+                        </span>
+                    </td>
+                </tr>
+            <? } ?>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="margin-sx-10">
+        <button class="btn btn-danger" id="add-slide" type="button">创建滑动广告图</button>
     </div>
 
     <div class="wrap-top">
@@ -196,26 +247,6 @@
                         </span>
                     </td>
                 </tr>
-                <tr>
-                    <td style="vertical-align:middle">衣服3</td>
-                    <td style="vertical-align:middle">10</td>
-                    <td style="vertical-align:middle">
-                        <span class="icon icon-delete">
-                            <a href="javascript:;" class="btn-warning">删除</a>
-                        </span>
-                        <span class="icon icon-editor">
-                        <a href="/internal/edit/?id=76757" class="btn-info">编辑</a>
-                        </span>
-                        &nbsp;&nbsp;
-                        <span>
-                            <img class="img" src="<?=StaticDir?>1.2/images/u85.gif">
-                        </span>
-                        &nbsp;
-                        <span class="img-flip">
-                            <img class="img" src="<?=StaticDir?>1.2/images/u85.gif">
-                        </span>
-                    </td>
-                </tr>
             </tbody>
         </table>
     </div>
@@ -251,12 +282,22 @@
                 type: 2,
                 scrollbar: false,
                 title: '创建热门搜索词',
-                area: ['650px', '430px'],
+                area: ['650px', '400px'],
 
                 content: '/basic/addWord/'
             });
         });
 
+        $("#add-slide").click(function(){
+            layer.open({
+                type: 2,
+                scrollbar: false,
+                title: '创建滑动广告图',
+                area: ['650px', '400px'],
+
+                content: '/basic/addSlide/'
+            });
+        });
     });
 
     function orderBasic(id, updown, type)
@@ -301,29 +342,60 @@
         });
     }
 
+    function wordEdit(id)
+    {
+        if ( id == '' || id == 0 ) return false;
+        layer.open({
+            type: 2,
+            scrollbar: false,
+            title: '修改热门搜索词',
+            area: ['650px', '430px'],
+
+            content: '/basic/editWord/?id='+id
+        });
+    }
+
+    function slideEdit(id)
+    {
+        if ( id == '' || id == 0 ) return false;
+        layer.open({
+            type: 2,
+            scrollbar: false,
+            title: '修改滑动广告图',
+            area: ['650px', '430px'],
+
+            content: '/basic/editSlide/?id='+id
+        });
+    }
+
     function cancel(id)
     {
         if ( id == '' || id == 0 ) return false;
-        $.ajax({
-            type : 'post',
-            url  : '/basic/delBasic/',
-            data : {id:id},
-            dataType : 'json',
-            success : function (data){
-                if (data.code==1){
-                    layer.msg('操作成功', {
-                        time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                    }, function(){
-                        window.location.reload();
-                    });
-                }else{
-                    var msg = data.msg == undefined ? '操作失败' : data.msg;
-                    layer.msg(msg);
+            layer.confirm('确定要删除吗？', {
+            btn: ['是的','算了'], //按钮
+            scrollbar: false,
+        }, function(){
+            $.ajax({
+                type : 'post',
+                url  : '/basic/delBasic/',
+                data : {id:id},
+                dataType : 'json',
+                success : function (data){
+                    if (data.code==1){
+                        layer.msg('操作成功', {
+                            time: 1000 //2秒关闭（如果不配置，默认是3秒）
+                        }, function(){
+                            window.location.reload();
+                        });
+                    }else{
+                        var msg = data.msg == undefined ? '操作失败' : data.msg;
+                        layer.msg(msg);
+                    }
+                },
+                error : function (data){
+                    layer.msg('操作失败，请稍后重试。');
                 }
-            },
-            error : function (data){
-                layer.msg('操作失败，请稍后重试。');
-            }
+            });
         });
     }
 </script>
