提交推荐分类功能并优化部分代码
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7739 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/basic/basic.banner.html
+++ b/App/View/basic/basic.banner.html
@@ -45,7 +45,7 @@
     $(function(){
         $(".mj-infoM").show();
 
-        $(".bzform").wrap("<form id='bzformupload' action='/internal/ajaxUploadPic/' method='post' enctype='multipart/form-data'></form>");
+        $(".bzform").wrap("<form id='bzformupload' action='/basic/ajaxUploadPic/' method='post' enctype='multipart/form-data'></form>");
         $("#bzfile").on('change', function(){
             $("#bzformupload").ajaxSubmit({
                 dataType:  'json',
