--- a/Static/1.2/css/main.css
+++ b/Static/1.2/css/main.css
@@ -300,3 +300,28 @@
     font-size: 12px;
 }
 
+
+.mjz-inp{
+    margin-top: 15px;
+    text-align: left;
+}
+.mjz-inp p{
+    font-size: 12px;
+    color: #666;
+    text-align: center;
+}
+.mjz-inp input{
+    margin: 5px 0;
+    padding-left: 15px;
+    width: 196px;
+    height: 35px;
+    line-height: 35px;
+    outline: none;
+    border: solid 1px #ddd;
+}
+.mjz-inp span{
+    display: block;
+    color: #fc6f28;
+    font-size: 12px;
+}
+
